--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -17,18 +17,27 @@ p.centered{
   margin-right: auto;
 
 }
-#navigation-bar{
-  max-width: 100%
-  height:auto;
-  list-style-type: none;
-  margin: 1;
-  padding: 0;
-  font-size:14pt;
-  overflow: hidden;
-  background-color: #fe0101;
-  width:auto;
-  border-radius: 15px;
+#navigation{
+  width:100%;
+  display:block;
+  float:left;
+  border:1px solid black;
+
+
 }
+.nav{
+  display: block;
+  float: left;
+  width:100%;
+  background-color: red;
+
+  text-align: center;
+}
+/*.nav > li{
+  flex:1;
+  list-style: none;
+}*/
+
 #banner{
   border-radius: 5px;
   width:100%;
@@ -46,10 +55,12 @@ h2{
 
 .grid-robot{
     display: grid;
+
     grid-gap: 10px;
     grid-color:#ffffff;
     background-color: #000000;
-    grid-template-columns: auto auto;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 100% 100%;
     padding: 10px;
 }
 .grid-robot-items {
@@ -70,20 +81,26 @@ h2{
   align-content: center;
 }
 
-li {
-    float:inline-end;
-    position:relative;
+.navButtons {
+display:block;
+float: left;
+width: 24%;
+border: 1px solid green;
+
 }
 
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    border-radius: 15px;
+@media only screen and (max-width:600px){
+  .navButtons {
+width:100%;
+}
+  .grid-robot{
+      float:left;
+    grid-template-columns: 100%;
+
+  }
+
 }
 
-li a:hover:not(.active) {
-    background-color: rgba(0, 0, 0, 0.65);
-}
+  /*ul.navigation li.Center,
+  ul.navigation li {float:none;}
+}*/
