--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -1,6 +1,4 @@
-﻿body {
 
-}
 article{
   text-align: center;
   margin-left: auto;
@@ -21,22 +19,16 @@ p.centered{
   width:100%;
   display:block;
   float:left;
-  border:1px solid black;
-
-
 }
 .nav{
   display: block;
   float: left;
   width:100%;
   background-color: red;
-
   text-align: center;
+  padding:10px;
 }
-/*.nav > li{
-  flex:1;
-  list-style: none;
-}*/
+
 
 #banner{
   border-radius: 5px;
@@ -55,7 +47,6 @@ h2{
 
 .grid-robot{
     display: grid;
-
     grid-gap: 10px;
     grid-color:#ffffff;
     background-color: #000000;
@@ -85,22 +76,16 @@ h2{
 display:block;
 float: left;
 width: 24%;
-border: 1px solid green;
-
 }
 
 @media only screen and (max-width:600px){
   .navButtons {
-width:100%;
+    width:100%;
 }
   .grid-robot{
-      float:left;
+    float:left;
     grid-template-columns: 100%;
 
   }
 
 }
-
-  /*ul.navigation li.Center,
-  ul.navigation li {float:none;}
-}*/
